--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vue-axios": "3.4.1",
     "vue-router": "3.3.4",
     "vue-toastification": "1.7.14",
-    "vue2-dropzone": "^3.6.0"
+    "vue2-dropzone": "^3.6.0",
+    "vuelidate": "0.7.7",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
